# inSpect

./: README.md  project.md  pyproject.toml  run_demo.sh
backend/: image_to_peaks.py  main.py  mist_inference.py
data/fixtures/: acetaminophen.json  acetone.json  aspirin.json  benzene.json  caffeine.json  capsaicin.json  cholesterol.json  citric_acid.json  dopamine.json  ethanol.json  glucose.json  ibuprofen.json  lidocaine.json  menthol.json  nicotine.json  penicillin_g.json  quinine.json  serotonin.json  toluene.json  vanillin.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CandidateCard.tsx  FileUpload.tsx  MolViewer.tsx  MolViewer3D.tsx
scripts/: build_fixtures.py
src/chemistry/: rdkit_utils.py
src/data/: binning.py  datasets.py
tests/: conftest.py  test_api.py
